# cryptopals

./: .gitignore  .gitmodules  README.org  meson.build  utils.c  utils.h
.github/workflows/: main.yml
ex01/: main.c
ex03/: main.c
ex04/: main.c
ex06/: main.c
src/: distance.c  distance.h  frequency.c  frequency.h  io.c  io.h  utils.c  utils.h
src/ex01/: main.c
src/ex02/: main.c
src/ex03/: main.c
src/ex04/: main.c
src/ex05/: main.c
src/ex06/: main.c
src/ex07/: main.c
src/ex08/: main.c
tests/: challenges.py  main.c
